--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,9 @@
-@import "../css/normalize.css";
-@import "../css/skeleton.css";
-
-
 html, body {
     width: 100vw;
     height: 100vh;
     margin: 0;
     overflow: hidden;
+    background-color: yellow;
 }
 
 .full {
